Remove TransactionHistory, centralize event reduction and refactor BankAccountActor
* Initial plan

* Refactor BankAccountActor: Remove TransactionHistory and centralize event reduction


* Use centralized applyEventToState() in Deposit and Withdraw handlers


* Refactor appendEvent to avoid duplicate marshalling and centralize stream version management


* Update to go-simple-eventstore v0.0.6 and use version returned by append


* Change streamVersion type from int to int64 to match eventstore types


* Move stream version management to applyEventToState for consistency


* Use slice for events in Append to let eventstore update version numbers automatically


* Add version field to BankAccountState and refactor applyEventToState as method of state


* Update generator to v0.0.5, restore factory with Closure pattern, and use bankaccount.NewActorFactory in main


* Remove redundant streamVersion field and use version from state


* go mod tidy

* Remove transaction history references from test scripts


---------
